--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kubicue/kudrp8.git"
+  },
   "author": "Jonathan Figueroa Castro",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/kubicue/kudrp8/issues"
+  },
+  "homepage": "https://github.com/kubicue/kudrp8#readme"
 }
