--- a/kubicue.info.yml
+++ b/kubicue.info.yml
@@ -1,10 +1,10 @@
 name: kubicue
-description: A basic micro theme build on Drupal 8.
+description: A basic microsite build on Drupal 8.
 type: theme
 core: 8.x
 libraries:
-  - atlas/global-css
-  - atlas/global-js
+  - kubicue/global-css
+  - kubicue/global-js
 stylesheets-remove:
   - core/assets/vendor/normalize-css/normalize.css
   - core/modules/system/css/system.module.css
